orientação do media feature
css comfigurado no mq2

--- a/css/cssfeature/style.css
+++ b/css/cssfeature/style.css
@@ -1,807 +1,6 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-*{
-   font-family: Arial, Helvetica, sans-serif;
-    /*
-    shorthand:
-
-    font: weight size family
-
-    shadow: posição lateral (%) Posição para baixo (%) dispersamento (%) cor
-
-    border: width style color
-
-    padding: top right back left (coloca so uma vez quando for tudas a mesma medida) (colocar dois valores significa que o primeiro valor vai para cima e baixo e o segundo para direita e esquerda)
-
-    margin: top right(auto) back left(auto) | (auto)= para centralizar
-
-    outline: width style color
-
-    background: color image position repeat size (não esta sendo identificado) attachment
-
-    */
-    margin: 0px;
-    padding: 0px;
-}
-
-:root {
-    --cor1:#1742FA;
-    --cor2:#1470DE;
-    --cor3:#23B9F5;
-    --cor4:#14DADE;
-    --cor5:#17FABF;
-
-    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
-    --fonte-destaque: 'Bebas Neue', cursive;
-}
-
-::-webkit-scrollbar {
-    width: 0px;
-    height: 0px;
-}
-
-body {
-    /*
-    Medidas Absolutas
-    cm, mm, in (polegada), px, pt (ponto), pc (paica)
-
-    Medidas Relativas
-    em (altura M da fonte), ex (altura X da fonte), rem (altura rute), vw (view width), vh (altura da view port), % 
-    */
-    font-family:var(--fonte-destaque);
-    background: rgb(73, 73, 73) url('../imagens/spiral\ espaço.jpg') center center no-repeat fixed;
-    background-size: cover;
-    height: 100vh;
-}
-
-body#css {
-    font-family:var(--fonte-destaque);
-    background: rgb(73, 73, 73) url('../imagens/espaço\ e\ terra.jpg') center center no-repeat fixed;
-    background-size: cover;
-    height: 100vh;
-}
-
-img {
-    min-width: none;
-    max-width: 500px;
-    margin-bottom: 10px;
-}
-
-div.sc {
-    min-width: none;
-    max-width: 450px;
-    margin-bottom: 10px;
-    display: inline-block;
-}
-
-picture {
-    width: 40%;
-    display: block;
-    margin-bottom: 10px;
-}
-
-div.video {
-    background-color: #000000a8;
-    margin: 0px -10px 30px -20px;
-    padding: 50px;
-    padding-bottom: 60vh;
-    position: relative;
-    margin-left: -10px;
-}
-
-div.video > video {
-    position: absolute;
-    top: 5%;
-    left: 5%;
-    width: 90%;
-    height: 90%;
-}
-
-video.vsimples {
-    background-color: #000000a8;
-    margin: 0px 0px 0px 0px;
-    padding-top: 10%;
-    padding-left: 15%;
-    padding-right: 15%;
-    padding-bottom: 10%;
-    position: relative;
-    margin-left: 0px;
-}
-
-video.vsimples > video {
-    position: absolute;
-    top: 5%;
-    left: 5%;
-    width: 90%;
-    height: 90%;
-}
-
-/* -------------------------------------Iframe------------------------------------- */
-iframe#iframehtml {
-    height: 300px; 
-    width: 100%;
-    border-radius: 5px;
-    box-shadow:black 0px 0px 10px;
-}
-
-aside.amostra > div#menu {
-    display: inline-block;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.473);
-    background-color: #316d8d;
-    color: rgb(255, 255, 255);
-    padding: 10px;
-    text-align: justify;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 20px;
+article#mq2 {
+    background-color: #2424ac;
     
 }
-
-aside.amostra > div#menu:hover {
-    box-shadow: 0px 0px 4px white;
-    background-color: #053c7c00;
-    text-decoration: none;
-    box-shadow: 0px 0px 0px transparent;
-    transition-duration: 1s;
-    padding: 0px;
-}
-
-
-aside.amostra > p.menup > a {
-    display: none;
-}
-
-aside.amostra:hover > p.menup > a.menua {
-    display: inline-block;
-    
-}
-
-a.botão {
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.473);
-    background-color: #316d8d;
-    color: rgb(255, 255, 255);
-    padding: 10px;
-    text-align: justify;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 20px;
-    transition-duration: 0.1s;
-    margin-bottom: 5px;
-}
-
-a.botão:hover {
-    box-shadow: 0px 0px 4px white;
-    text-shadow: 2px 2px 3px #b1b1b1e3;
-    background-color: #053c7c8e;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    border-radius: 17px;
-}
-
-a.botão:active {
-    box-shadow: 0px 0px 4px white;
-    background-color: #1168cc8e;
-    border-radius: 10px;
-    color: rgb(255, 255, 255);
-}
-
-.botão {
-    text-indent: 0px;
-    margin-bottom: 0px;
-    background-color: #565d6e00;
-    padding: 0px;
-    border-radius: 0px;
-    margin-bottom: 0px;
-    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
-}
-
-
-
-aside.amostra > a {
-    
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.473);
-    background-color: #316d8d;
-    color: rgb(255, 255, 255);
-    padding: 10px;
-    text-align: justify;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 20px;
-    transition-duration: 0.1s;
-
-}
-
-aside.amostra > a:hover {
-    box-shadow: 0px 0px 4px white;
-    text-shadow: 2px 2px 3px #b1b1b1e3;
-    background-color: #053c7c8e;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    border-radius: 17px;
-}
-
-aside.amostra > a:active {
-    box-shadow: 0px 0px 4px white;
-    background-color: #1168cc8e;
-    border-radius: 10px;
-    color: rgb(255, 255, 255);
-}
-
-
-
-
-/* -------------------------------------header------------------------------------ */
-
-header {
-    background: rgb(102, 100, 100) url('../imagens/fundo-preto-background114-1024x640.png') center center no-repeat fixed;
-    background-size: cover;
-    min-height: 150px;
-    
-    text-align: center;
-    padding-top: 40px;
-}
-
-header > h1 {
-    color: white;
-    font-family: var(--fonte-destaque);
-    font-size: 3em;
-    font-weight: normal;
-    margin-bottom: 20px;
-    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.377);
-}
-
-header > p {
-    font-family: var(--fonte-padrao);
-    font-size: 1.2em;
-    color: white;
-    max-width: 500px;
-    margin: auto;
-    padding-right: 10px;
-    padding-left: 10px;
-    padding-bottom: 5px;
-    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.308);
-}
-
-#headerblack {
-    color: black;
-    text-shadow: 2px 2px 0px gray;
-}
-
-/* ----------------------------------NAV--------------------------------------------- */
-
-nav {
-    top: auto;
-    background-color: rgba(0, 0, 0, 0.822);
-    background-position: bottom center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    padding-top: 7px;
-    padding-bottom: 10px;
-    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.349);
-    text-align: center;
-    height: auto;
-}
-
-div#menu {
-    display: inline-block;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0);
-    background-color: #0c007400;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 10px;
-    width: 54px;
-    height: 40px;
-}
-
-div#menu:hover {
-    box-shadow: 0px 0px 4px white;
-    background-color: #02020200;
-    text-decoration: none;
-    box-shadow: 0px 0px 0px transparent;
-    transition-duration: 0s;
-    padding: auto;
-    width: 100%;
-    height: auto;
-    
-}
-
-section.menum {
-    background-color: rgba(0, 0, 0, 0);
-    text-align: justify;
-    display: none;
-}
-
-div#menu:hover > section.menum {
-    display: inline-block;
-    text-align: center;
-    width: 100%;
-    height: 40px;
-    position: relative;
-}
-
-section.menum > a {
-    display: none;
-}
-
-section.menum:hover > a {
-    display: inline;
-}
-
-p.menup {
-    background-color: #0c0074da;
-    border-radius: 10px;
-
-    margin-bottom: 15px;
-    padding: 10px;
-    text-indent: 0px;
-    display: inline-block;
-}
-
-div#menu:hover > p.menup {
-    display: none;
-}
-
-
-
-a.menua {
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.473);
-    background-color: #0000006b;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    text-decoration: none;
-    font-weight: bold;
-    transition-duration: 0.1s;
-    display: inline-block;
-    padding: 10px;
-    box-shadow: 0px 0px 2px white;
-    max-height: 25px;
-    position: relative;
-    top: 4px;
-    
-}
-
-a.menua:hover {
-    box-shadow: 0px 0px 4px white;
-    text-shadow: 2px 2px 3px #b1b1b1e3;
-    background-color: #053c7c8e;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    border-radius: 10px;
-    
-}
-
-a.menua:active {
-    box-shadow: 0px 0px 4px white;
-    background-color: #1168cc8e;
-    border-radius: 30px;
-    color: rgb(255, 255, 255);
-}
-
-
-/* -----------------------------Main--------------------------------------- */
-
-main {
-    border-radius: 0px 0px 10px 10px;
-
-    background: rgba(0, 0, 0, 0.774) ;
-    background-attachment: fixed;
-    background-size: cover;
-    
-    color: rgb(189, 189, 189);
-
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.384);
-    /* ------------------------------------------------ */
-    padding: 10px 20px 20px 20px;
-    min-width: 300px;
-    max-width: 1000px;
-    margin: auto;
-    margin-bottom: 30px;
-    
-}
-
-main img {
-    margin: auto;
-    display: block;
-    width: 100%;
-}
-
-main img.pequena {
-    margin: auto;
-    display: block;
-    max-width: 350px;
-}
-
-main h1 {
-    color: var(--cor5);
-    font-family: var(--fonte-android);
-    font-weight: normal;
-    font-size: 1.8em;
-}
-
-main h2 {
-    font-family: var(--fonte-android);
-    color: var(--cor4);
-    font-size: 1.3em;
-    font-weight: normal;
-    background-image: linear-gradient(to right, #172350ad, transparent);
-    text-indent: 8px;
-    margin: -10px -10px 5px -10px;
-    border-radius: 10px 10px 0px 0px;
-}
-
-main > p {
-    margin: 15px 0px;
-    text-align: justify;
-    text-indent: 30px;
-    line-height: 2em;
-    font-size: 1em;
-}
-
-main strong {
-    color: var(--cor4);
-    font-weight: bold;
-}
-
-main a {
-    text-decoration: none;
-    font-weight: bold;
-    color: var(--cor5);
-    background-color: #14111199;
-    padding: 4px 6px;
-    border-radius: 9px;
-}
-
-main a:hover {
-    text-decoration: underline;
-    color: var(--cor4);
-}
-/* -------------------------IDs----------------------- */
-#meuids {
-    position: relative;
-
-
-    height: 170px;
-
-    
-}
-
-#qrcode1 {
-    background-image: url('../imagens/frame.png');
-    background-size: 100% 100%;
-
-    position: absolute; top: 10px; left: 10px;
-
-    height: 150px;
-    width: 150px;
-}
-
-#myfoto {
-    background-image: url('../imagens/perfils.jpg');
-    background-size: 100% 100%;
-    
-
-    position: absolute; top: 10px; right: 10px;
-    transform: translateX(-);
-
-    height: 150px;
-    width: 150px;
-}
-
-/* --------------------------------Aside------------------------------- */
-
-aside {
-    background-color: #29292957;
-    padding: 10px;
-    border-radius: 10px;
-    margin-bottom: 10px;
-    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.308);
-    
-}
-
-aside > p > a {
-    text-decoration: none;
-    font-weight: bold;
-    color: var(--cor5);
-    background-color: var(--cor3);
-    padding: 2px 6px;
-}
-
-aside ul li {
-    margin-bottom: 5px;
-}
-
-aside > ul {
-    list-style-position: inside;
-    columns: 1;
-    margin-bottom: 10px;
-}
-
-aside.unicacoluna > ul{
-    list-style-position: inside;
-    columns: 1;
-    margin-bottom: 10px;
-}
-
-img.ocupalinha {
-   display: block;
-   columns: 1;
-}
-
-aside ol li {
-    margin-bottom: 5px;
-}
-
-aside > ol {
-    list-style-position: inside;
-    columns: 2;
-    margin-bottom: 10px;
-}
-
-aside h3 {
-    background-color: #303030;
-    color: white;
-    padding: 10px;
-    margin: -10px -10px 0px -10px;
-    margin-bottom: 10px;
-    border-radius: 10px 10px 0px 0px;
-    
-}
-
-aside h4 {
-    background-color: #1b283a;
-    color: white;
-    padding: 10px;
-    margin: -10px -10px 0px -10px;
-    margin-bottom: 10px;
-    border-radius: 10px 10px 0px 0px;
-    box-shadow: 0px -3px 5px rgb(0 0 0 / 40%)
-}
-
-/* ------------------------------------Html----------------------------------- */
-
-h1 {
-    color: #00198a;
-    text-align: center;
-    text-shadow: 7px 7px 13px rgba(0, 0, 0, 0.212);
-    margin-bottom: 10px;
-    border-radius: 10px;
-}
-
-h2 {
-    text-shadow: 5px 5px 8px rgba(0, 0, 0, 0.295);
-    margin-bottom: 10px;
-    border-radius: 10px;
-}
-
-h3 {
-    border-radius: 10px;
-    margin-bottom: 10px;
-}
-
-h4 {
-    background-color: #1b283a;
-    color: white;
-    padding: 10px;
-    margin: -10px -10px 0px -10px;
-    margin-bottom: 10px;
-    border-radius: 10px 10px 0px 0px;
-    box-shadow: 0px -3px 5px rgb(0 0 0 / 40%)
-}
-
-pre {
-    text-align: justify;
-}
-
-p {
-    text-indent: 15px;
-    margin-bottom: 10px;
-}
-
-p.pre {
-    text-align: left;
-}
-
-ul > li > ul {
-    display: inline-block;
-    margin: 5px;
-}
-
-a:hover {
-    color: #1742FA;
-    text-decoration: underline;
-}
-
-a:active {
-    color: #1470DE;
-    background-color: #00198a;
-    text-decoration: underline;
-}
-
-a.externo::after {
-    content: '\1F517';
-}
-
-div#titulo-div {
-    text-align: center;
-    background-color: rgba(128, 128, 128, 0.589);
-}
-
-div#titulo-div:hover {
-    background-color: #14DADE;
-    border-radius: 5px;
-}
-
-div.id {
-    background-color: var(--cor4);
-    display: inline-block;
-    border: 1px solid black;
-    text-align: center;
-    height: 200px;
-    width: 200px;
-    border-radius: 10px;
-}
-
-div.id:hover {
-    background-color: var(--cor2);
-}
-
-.ex1 {
-    text-align: left;
-    background-color: #146fde00;
-}
-
-.ex1:hover {
-    background-color: #146fde00;
-    color: var(--cor4);
-}
-
-.ex1 > p {
-    display: none;
-}
-
-.ex1:hover > p {
-    color: aliceblue;
-    background-color: var(--cor4);
-    display: block;
-    width: 233px;
-    border-radius: 10px;
-    padding: 5px;
-}
-
-.ocupalinha {
-    background-color: rgba(211, 211, 211, 0.459);
-    padding: 5px;
-}
-
-/* ----------------------Tabela------------------------- */
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-    position: relative;
-
-}
-
-thead > tr > th {
-    position: sticky;
-    top: 0;
-    background-color: rgb(65, 65, 65);
-}
-
-tbody {
-    background-color: rgb(158, 158, 158);
-}
-
-tbody > tr:nth-child(2n) {
-    background-color: rgb(114, 114, 114);
-}
-
-tfoot {
-    background-color: rgb(65, 65, 65);
-}
-
-th {
-    border: 1px solid black;
-    padding: 8px;
-    background-color: rgb(65, 65, 65);
-}
-
-td {
-    border: 1px solid black;
-    padding: 8px;
-    text-align: center; /* alinhamento horizontal */
-    vertical-align: middle; /*alinhamaneto vertical */
-}
-
-div.table {
-    overflow-x: auto;
-}
-
-/* para tabelas grandes ultilizar
-caption
-thead
-tbody
-tfoot */
-
-/* Efeito zebrado 
-
-tbody > tr:nth-child(even/2n=par,odd/2n-1=impar,) {
-    background-color: lightgray;
-}
-*/
-
-/* Cabeçalho fixo 
-
-table {
-    position: relative;
-}
-
-thead > tr > th {
-    position: sticky;
-    top: 0;
-    background-color: o mesmo do thead;
-}
-
-*/
-
-/*
-Mesclagem de Células
-
-ocupar colunas
-<td colspan="quantidade de culanas para ocupar">item q ocupe a parte vazia</td>
-
-ocupar linhas
-<td rowspan="quantidade de linhas para ocupar">...</td>
-
-*/
-
-/* ----------------------------Section---------------------------- */
-
-section#mapsea {
-    background-color: rgb(252, 228, 186);
-    background-image: url(../imagens/Sem\ Título-1.png);
-    background-position: bottom center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
-
-/* --------------------------Roda-pé------------------------- */
-
-footer {
-    background-color: black;
-    background-image: url('../imagens/fundo-preto-background114-1024x640.png');
-    background-position: bottom center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-
-    color: white;
-    text-align: center;
-    font-size: 0.8em;
-    padding: 5px;
-    position: relative;
-}
-
-footer p {
-    margin-bottom: 0px;
-}
-
-footer a {
-    color: rgb(214, 255, 216);
-    font-weight: bolder;
-    text-decoration: none;
-}
-
-footer a:hover {
-    text-decoration: underline;
-    color: var(--cor1);
-}
-
-/* ------------------Media Query----------------- */
-
