--- a/links/login/estilos/media-querie.css
+++ b/links/login/estilos/media-querie.css
@@ -3,7 +3,7 @@
 @media screen and (min-width:768px) and (max-width:992px) {
 
     body {
-        background-image: radial-gradient( #00ffff93, #00091e);
+        background-image: radial-gradient( #3a3a3a93, #ffffff);
     }
 
     section#login {
@@ -11,6 +11,8 @@
     }
 
     section#login > div#imagem {
+        border-bottom-left-radius: 19px;
+        border-top-right-radius: 0px;
         float: left;
         width: 30%;
         height: 100%;
@@ -26,7 +28,7 @@
 @media screen and (min-width: 992px) {
 
     body {
-        background-image: radial-gradient( #00ffff93, #00091e);
+        background-image: radial-gradient( #3a3a3a93, #ffffff);
     }
 
     section#login {
@@ -34,16 +36,26 @@
     }
 
     section#login > div#imagem {
-        float: left;
+        border-bottom-right-radius: 19px;
+        border-top-left-radius: 0px;
+        float: right;
         width: 40%;
         height: 100%;
         
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 60%;
         height: 100%;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+    
+    div#formulario > p {
+        font-size: 1.2em
     }
 }
 
