--- a/links/login/estilos/style.css
+++ b/links/login/estilos/style.css
@@ -8,7 +8,7 @@
 }
 
 body, html{
-    background-color: #02134a;
+    background-color: #c7c7c7;
     height: 100vh;
     width: 100vw;
 }
@@ -20,13 +20,14 @@ main{
 }
 
 section#login{
-    background-color: #00091e;
+    background-color: #f0f0f0;
     width: 250px;
     height: 500px;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px #00ffff93;
+    box-shadow: 0px 0px 10px #00000093;
+    border:2px solid #02134a;
 
-    color: azure;
+    color: rgb(0, 0, 0);
 
     position: absolute;
     top: 50%;
@@ -34,7 +35,7 @@ section#login{
     transform: translate(-50%, -50%);
     overflow: 20px;
 
-    transition: width .1s, height .1s;
+    transition: width .2s, height .2s;
     transition-timing-function: ease;
 }
 
@@ -45,12 +46,103 @@ section#login > div#imagem{
     background-position: center center;
     border-top-right-radius: 19px;
     border-top-left-radius: 19px;
-    border-bottom-left-radius: 19px;
+    
 
     height: 200px;
 }
 
 section#login > div#formulario{
+    
     display: block;
+
     padding: 10px;
+
+}
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p {
+    font-size: 0.8em
+}
+
+div.campo {
+    background-color: white;
+    border: 2px solid #02134a;
+    border-radius: 50px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+div.campo > span {
+    color: #02134a;
+}
+
+input[type=email] {
+    border-width: 0px;
+    border-left-width: 2px;
+    border-left-color: #02134a;
+    border-radius: 50px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    width: calc(100% - 30px);
+    height: 36px;
+}
+
+input[type=password] {
+    border-width: 0px;
+    border-left-width: 2px;
+    border-left-color: #02134a;
+    border-radius: 50px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    width: calc(100% - 30px);
+    height: 36px;
+}
+
+form input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #02134a;
+    color: white;
+    border: none;
+    border-radius: 5px;
+
+    margin-top: 5px;
+
+    cursor: pointer;
+}
+
+form input[type=submit]:hover {
+    background-color: white;
+    color: #02134a;
+    border: 2px solid #02134a;
+}
+
+form input[type=reset] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #02134a;
+    color: white;
+    border: none;
+    border-radius: 5px;
+
+    margin-top: 5px;
+
+    cursor: pointer;
+}
+
+form input[type=reset]:hover {
+    background-color: white;
+    color: #02134a;
+    border: 2px solid #02134a;
 }
