Mudança de foto de perfil my

--- a/css/style.css
+++ b/css/style.css
@@ -523,7 +523,7 @@ main a:hover {
 }
 
 #myfoto {
-    background-image: url('../imagens/perfils.jpg');
+    background-image: url('../imagens/Profissional\ cut.jpg');
     background-size: 100% 100%;
     
 
