--- a/css/style.css
+++ b/css/style.css
@@ -520,6 +520,7 @@ main a:hover {
 
     height: 150px;
     width: 150px;
+    border-radius: 15px;
 }
 
 #myfoto {
@@ -532,6 +533,7 @@ main a:hover {
 
     height: 150px;
     width: 150px;
+    border-radius: 15px;
 }
 
 /* --------------------------------Aside------------------------------- */
