--- a/css/style.css
+++ b/css/style.css
@@ -536,6 +536,24 @@ main a:hover {
     border-radius: 15px;
 }
 
+#myfoto > a {
+    border-radius: 50%;
+    color: white;
+
+    text-decoration: none;
+
+    border: 1px solid white;
+}
+
+#myfoto > a:hover {
+    background-color: #cccccc;
+    color: black;
+
+    box-shadow: 1px 2px 6px black;
+
+    transition: 0.5s;
+}
+
 /* --------------------------------Aside------------------------------- */
 
 aside {
