finish do projeto flexbox

--- a/links/Flexbox/Projeto/FlexProj.css
+++ b/links/Flexbox/Projeto/FlexProj.css
@@ -22,9 +22,51 @@ header, section.normal {
 section.flex-content {
     padding: 20px;
     background: rgb(182, 182, 182);
+
+    display: flex;
+    flex-flow: column nowrap;
 }
 
-p, h1, h2 {
+article.text-media{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+article.media-text{
+    display: flex;
+    flex-flow: row wrap-reverse;
+    justify-content: space-between;
+}
+
+article > div.text {
+    flex: 1 1 500px;
+}
+
+article > div.media {
+    flex: 1 0 500px;
+}
+
+div.media > img {
+    display: block;
+    margin: auto;
+    width: 300px;
+    padding: 10px;
+}
+
+div.media > iframe {
+    display: block;
+    margin: auto;
+    width: 90%;
+}
+
+h1, h2 {
+    margin-bottom: 20px;
+    line-height: 1.2em;
+    text-align: left;
+}
+
+p {
     margin-bottom: 10px;
     text-align: justify;
 }
